2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Support 4K sectors UDF inline files.

	* grub-core/fs/udf.c (grub_udf_file_entry): Don't specify padding size.
	(grub_udf_extended_file_entry): Likewise.
	(grub_fshelp_node): Name the anonymous union. Put block at the end.
	All users updated.
	(get_fshelp_size): New function.
	(grub_udf_read_icb): Read whole block.
	(grub_udf_iterate_dir): Likewise.
	(grub_udf_dir): Likewise.
	(grub_udf_open): Likewise.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_get_file_block): Support triple indirect.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_lookup_symlink): Use proper check for
	inline symlinks in addition to workaround.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (grub_xfs_iterate_dir): Handle read_inode errors.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/xfs.c (GRUB_XFS_EXTENT_BLOCK): Fix bitmask.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (nvlist_find_value): Fix return value.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix reiserfs big seek times.

	* grub-core/fs/reiserfs.c (grub_reiserfs_get_item): New argument
	exact. All users updated.
	(grub_reiserfs_read): Use nearest btree search for seeking.
	Fix return value on error.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/legacycfg.c (legacy_file): Default to restricted
	entries.
	* grub-core/commands/menuentry.c (grub_cmd_menuentry): Likewise.
	* docs/grub.texi: Update menuentry description.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-setup.c (setup): Remove duplicate call to embed. Fixes
	crash when embedding onto filesystem.

2012-05-02  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (find_root_devices_from_poolname): Handle spaces in the
	name.

2012-05-01  Vladimir Serbinenko  <phcoder@gmail.com>
